# avatar-train

./: .gitignore  README.md  pyproject.toml  train.py
configuration/global/: _data_backup.yaml  data.yaml  model.yaml  optimizer.yaml  train.yaml
configuration/unet/: config.json
example/: example_metadata.json  example_metadata.npz  repa_trainer_example.py
helpers/: __init__.py  dataset.py  download.py  utils.py
models/: musetalk_dataset.py  position_encoding.py  repa.py  syncnet.py  trainer.py
models/config/: __init__.py  basic.py  data.py  model.py  optimizer.py  train.py
models/loss/: __init__.py  other_loss.py
preprocess/: ImageReaderDataset.py  README.md  audio_feature_extractor.py  audio_feature_extrator.py  background_matter.py  check_len.py  crop_image.py  crop_images_wo_bg.py  dino.py  environment.yml  run.py  segment.py
preprocess/experimental/: sd_feat.py
preprocess/submodules/whisper/: audio2feature.py
scripts/: inference.py  inference_wt_tiny_vae.py  make_metadata.py  metadata.json  metadata_tony.npz
submodules/whisper/whisper/: audio.py
